--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
-*{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+.container{
+    display: flex;
+    flex-direction: column;
+
+}
+.log{
+    height: 350px;
+    width: 700px;
+    background-color: aqua;
+}
+.form{
+    background-color: azure;
+    width: 700px;
+}
+.close{
+    background-color: beige;
+    width: 700px;
 }
