--- a/style.css
+++ b/style.css
@@ -1,18 +1,23 @@
-.container{
+body{
+    margin: 0;
+    background-color: lightblue;
+}
+.main{
     display: flex;
-    flex-direction: column;
-
+    flex-direction: row;
 }
-.log{
-    height: 350px;
-    width: 700px;
-    background-color: aqua;
+.logo{
+    position: absolute;
+    top: 20%;
+    height: 20%;
+    width: 40%;
+    background-color: lightpink;
+    opacity: 65%;
 }
-.form{
-    background-color: azure;
-    width: 700px;
-}
-.close{
-    background-color: beige;
-    width: 700px;
+.info{
+    position: absolute;
+    right: 0;
+    width: 60%;
+    height: 100%;
+    background-color: lightseagreen;
 }
