--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ img{
 }
 .description{
     padding-left: 2.5%;
-    color: whitesmoke;
+    color: #A5C9CA;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -56,53 +56,49 @@ img{
     font-size: larger;
 }
 .data{
-    height: 30%;
+    height: 35%;
     padding-left: 2.5%;
-    color: whitesmoke;
     display: flex;
     flex-direction: column;
 }
+.start{
+    color: #395B64;
+}
 .fill{
-    width: 80%;
-    height: 25%;
-    display: flex;
-    row-gap: 35%;
-    column-gap: 5%;
+    width: 100%;
+    height: 30%;
+    gap: 5%;
+    display:flex;
     justify-content: flex-start;
+    align-items: center;
     flex-wrap:wrap;
 }
-input[type=text] {
+input{
     display: block;
-    background-color: #395B64;
-    border-style: none;
-    color: white;
+    background: none;
+    border:2.5px solid #A5C9CA;
     text-decoration: none;
     cursor: pointer;
-  }
-  input[type=email] {
-    display: block;
-    background-color: #395B64;
-    border-style: none;
-    color: white;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  input[type=number] {
-    display: block;
-    background-color: #395B64;
-    border-style: none;
-    color: white;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  input[type=password] {
-    display: block;
-    background-color: #395B64;
-    border-style: none;
-    color: white;
-    text-decoration: none;
-    cursor: pointer;
-  }
+    color:#A5C9CA;
+    font-family: inherit;
+    font-size: inherit;
+    outline: none;
+    border-radius: 5px;
+}
+input:hover{
+    border: 2.5px solid #395B64;
+}
+input:focus{
+    border: 2.5px solid #395B64;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+label{
+    color:#A5C9CA;
+}
 .but{
     padding-left: 2.5%;
     color: whitesmoke;
@@ -118,16 +114,29 @@ input[type=text] {
     border: none;
     color: white;
     background-color: #395B64;
+    border-radius: 10px;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
+    transition: 0.5s;
     cursor: pointer;
 }
-a{
+.button:hover{
+    transition: 0.8s;
+    background-color: #eab308;
+    color: #2C3333;
+}
+.question{
+    color: #A5C9CA;
+}
+.log{
     text-decoration: none;
-    color: #eab308;
+    color:#395B64;
     display: inline-block;
+}
+.log:hover{
+    color:#eab308;
 }
